--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-three/fiber": "^8.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-type-animation": "^3.0.1",
+    "tailwindcss-filters": "^3.0.0",
     "three": "^0.152.2"
   },
   "devDependencies": {
