--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "postbuild": "react-snap dist"
   },
   "dependencies": {
     "@react-three/drei": "^9.66.1",
-    "@react-three/fiber": "^8.13.0",  
+    "@react-three/fiber": "^8.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-type-animation": "^3.0.1",
@@ -32,7 +33,11 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "gh-pages": "^5.0.0",
     "postcss": "^8.4.23",
+    "react-snap": "^1.23.0",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2"
+  },
+  "reactSnap": {
+    "inlineCss": true
   }
 }
