--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@react-three/drei": "^9.66.1",
     "@react-three/fiber": "^8.13.0",
+    "framer-motion": "^10.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-type-animation": "^3.0.1",
