--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^10.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax-mouse": "^2.1.0",
     "react-type-animation": "^3.0.1",
     "tailwindcss-filters": "^3.0.0",
     "three": "^0.152.2"
