--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "postbuild": "react-snap dist"
   },
   "dependencies": {
-    "@react-three/drei": "^9.66.1",
-    "@react-three/fiber": "^8.13.0",
+    "@react-three/drei": "^9.108.1",
+    "@react-three/fiber": "^8.16.8",
+    "@types/three": "^0.166.0",
     "framer-motion": "^10.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,7 +24,7 @@
     "react-router-dom": "^6.21.0",
     "react-type-animation": "^3.0.1",
     "tailwindcss-filters": "^3.0.0",
-    "three": "^0.152.2"
+    "three": "^0.166.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
