--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "postbuild": "react-snap dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@react-three/drei": "^9.108.1",
@@ -37,7 +36,6 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "gh-pages": "^5.0.0",
     "postcss": "^8.4.23",
-    "react-snap": "^1.23.0",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2"
   },
